--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.9",
-    "@angular/cli": "~10.0.6",
     "@angular/cdk": "^10.1.3",
+    "@angular/cli": "~10.0.6",
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/compiler-cli": "~10.0.9",
@@ -24,10 +24,11 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "express": "^4.17.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.6",
